gcc/testsuite/rust/rustc/ui/did_you_mean/issue-38054-do-not-show-unresolved-names.rs
use Foo; // { dg-error ".E0432." "" { target *-*-* } }

use Foo1; // { dg-error ".E0432." "" { target *-*-* } }

fn main() {}

